# cpp-mcp

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: mcpConfig.cmake.in
examples/: server_example.cpp  stdio_client_example.cpp
include/: mcp_client.h  mcp_logger.h  mcp_message.h  mcp_resource.h  mcp_server.h  mcp_sse_client.h  mcp_stdio_client.h  mcp_thread_pool.h
src/: mcp_resource.cpp  mcp_server.cpp  mcp_sse_client.cpp  mcp_stdio_client.cpp
test/: CMakeLists.txt  mcp_test.cpp
